ALL THE libraries

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "todo",
   "version": "0.1",
   "description": "a todo list",
-  "default_action": {
+  "browser_action": {
     "default_popup": "todo.html",
     "default_title": "todo",
     "default_icon": "img/todo.png"
